verif/test/deca/syntax/invalid/class/class-simple-2-verif.res
src/test/deca/syntax/invalid/class/class-simple-2.deca:7:14: mismatched input '=' expecting IDENT
